--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "color_palette_manager",
-  "displayName": "color_palette_manager",
-  "description": "Welcome to the `clrpltmngr` extension for VS Code. This extension provides a comprehensive color palette manager, designed to streamline and enhance your design and development workflow in Visual Studio Code.",
+  "name": "clrpltmngr",
+  "displayName": "PaletteGenTS",
+  "description": "Welcome to the `PaletteGenTS` extension for VS Code, the first palette that sits right in your primary side-bar and who does not open annoying additional  windows. This extension provides a comprehensive color palette manager, designed to streamline and enhance your design and development workflow in Visual Studio Code.",
   "publisher": "alfonso-falcone",
-  "version": "0.0.1",
+  "version": "0.0.21",
   "engines": {
     "vscode": "^1.83.0"
   },
