bug-fix and changed app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clrpltmngr",
+  "name": "color-squares",
   "displayName": "PaletteGenTS",
   "description": "Welcome to the `PaletteGenTS` extension for VS Code, the first palette that sits right in your primary side-bar and who does not open annoying additional  windows. This extension provides a comprehensive color palette manager, designed to streamline and enhance your design and development workflow in Visual Studio Code.",
   "publisher": "alfonso-falcone",
